tests/baselines/reference/accessors_spec_section-4.5_error-cases.errors.txt
==== tests/cases/compiler/accessors_spec_section-4.5_error-cases.ts (4 errors) ====
    class LanguageSpec_section_4_5_error_cases {
        public set AnnotatedSetter_SetterFirst(a: number) { }
        public get AnnotatedSetter_SetterFirst() { return ""; }
                                                          ~~
!!! accessors_spec_section-4.5_error-cases.ts(3,55): error TS2011: Cannot convert 'string' to 'number'.
    
        public get AnnotatedSetter_SetterLast() { return ""; }
                                                         ~~
!!! accessors_spec_section-4.5_error-cases.ts(5,54): error TS2011: Cannot convert 'string' to 'number'.
        public set AnnotatedSetter_SetterLast(a: number) { }
    
        public get AnnotatedGetter_GetterFirst(): string { return ""; }
        public set AnnotatedGetter_GetterFirst(aStr) { aStr = 0; }
                                                       ~~~~
!!! accessors_spec_section-4.5_error-cases.ts(9,52): error TS2011: Cannot convert 'number' to 'string'.
    
        public set AnnotatedGetter_GetterLast(aStr) { aStr = 0; }
                                                      ~~~~
!!! accessors_spec_section-4.5_error-cases.ts(11,51): error TS2011: Cannot convert 'number' to 'string'.
        public get AnnotatedGetter_GetterLast(): string { return ""; }
    }